feat(alerts): Integrate Alert API for fetching alerts, implement pagination, and enhance image/video presentation with AspectRatio component

--- a/src/i18n/locales/common/en.json
+++ b/src/i18n/locales/common/en.json
@@ -3,5 +3,7 @@
 		"vi": "Vietnamese",
 		"en": "English"
 	},
-	"resultPerPage": "Result per page"
+	"resultPerPage": "Result per page",
+	"loading": "Loading...",
+	"noData": "No data"
 }
