--- a/src/i18n/locales/common/vi.json
+++ b/src/i18n/locales/common/vi.json
@@ -3,5 +3,7 @@
 		"vi": "Tiếng Việt",
 		"en": "Tiếng Anh"
 	},
-	"resultPerPage": "Kết quả trên trang"
+	"resultPerPage": "Kết quả trên trang",
+	"loading": "Đang tải...",
+	"noData": "Không có dữ liệu"
 }
