feat(company-selection): Add CompanySelection component for selecting companies, integrate with global state and API; enhance sidebar and routing for new features

--- a/src/i18n/locales/sidebar/en.json
+++ b/src/i18n/locales/sidebar/en.json
@@ -5,5 +5,18 @@
 	"alertsManagement": "Alerts Management",
 	"liveView": "Live View",
 	"settings": "Settings",
-	"systemSettings": "System Settings"
+	"systemSettings": "System Settings",
+	"monitoring": "Monitoring",
+	"analytics": "Analytics",
+	"devices": "Devices",
+	"cameras": "Cameras",
+	"operations": "Operations",
+	"mapConfiguration": "Map Configuration",
+	"deviceStatus": "Device Status",
+	"detections": "Detections",
+	"logs": "Logs",
+	"knowledgeBase": "Knowledge Base",
+	"administration": "Administration",
+	"roleSettings": "Role Settings",
+	"system": "System"
 }
