feat(companies): Implement Companies management page with CRUD functionality, including company creation, editing, and deletion; integrate location selection with Google Places API for enhanced user experience

--- a/src/i18n/locales/sidebar/en.json
+++ b/src/i18n/locales/sidebar/en.json
@@ -18,5 +18,6 @@
 	"knowledgeBase": "Knowledge Base",
 	"administration": "Administration",
 	"roleSettings": "Role Settings",
-	"system": "System"
+	"system": "System",
+	"companies": "Companies"
 }
