--- a/src/i18n/locales/sidebar/vi.json
+++ b/src/i18n/locales/sidebar/vi.json
@@ -18,5 +18,6 @@
 	"knowledgeBase": "Cơ sở kiến thức",
 	"administration": "Quản trị",
 	"roleSettings": "Cài đặt vai trò",
-	"system": "Hệ thống"
+	"system": "Hệ thống",
+	"companies": "Công ty"
 }
