feat(smartlocks): Add SmartLock event management features, including API endpoints for creating, retrieving, and listing events; implement SmartLock management UI with event handling and permissions in the sidebar.

--- a/src/i18n/locales/sidebar/en.json
+++ b/src/i18n/locales/sidebar/en.json
@@ -19,5 +19,6 @@
 	"administration": "Administration",
 	"roleSettings": "Role Settings",
 	"system": "System",
-	"companies": "Companies"
+	"companies": "Companies",
+	"smartLocks": "Smart Locks"
 }
