--- a/src/i18n/locales/sidebar/vi.json
+++ b/src/i18n/locales/sidebar/vi.json
@@ -19,5 +19,6 @@
 	"administration": "Quản trị",
 	"roleSettings": "Cài đặt vai trò",
 	"system": "Hệ thống",
-	"companies": "Công ty"
+	"companies": "Công ty",
+	"smartLocks": "Khóa thông minh"
 }
